--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="viewport" content="width=device-width">
 	
     <!-- Link del diseñador de la página -->	
-	<link rel="author" href="https://es.linkedin.com/in/sergiolozanogallego">
+	<link rel="author" href="">
 
     <!-- Iconos para los diferentes dispositivos -->
 	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
